d3dvideosink: release existing D3D swap chain on init

https://bugzilla.gnome.org/show_bug.cgi?id=745159